# map-playground-personal

./: .gitignore  AGENTS.md  CODEBASE_REVIEW_PROMPTS.md  PROGRESS.md  README.md  biome.json  export-market-source.XXXXXX.sh  file-length-report.md  infra-progress.md  migrate-effect.md  mp-44-launch-policy.md  mp-45-catchment-calibration.md  next-phase.md  package.json  skills-lock.json  tsconfig.base.json  tsconfig.json  turbo.json
.playwright-cli/: check-scroll.js  page-2026-03-22T18-41-19-983Z.yml  page-2026-03-22T18-41-23-014Z.yml  page-2026-03-22T18-41-33-243Z.yml  page-2026-03-22T18-43-09-309Z.yml  page-2026-03-22T18-43-13-849Z.yml  page-2026-03-22T18-44-17-867Z.yml  page-2026-03-22T18-44-25-407Z.yml
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json
apps/dagster/: .env.example  README.md  pyproject.toml
apps/dagster/.dagster/: dagster.yaml
apps/dagster/src/map_dagster/: assets.py  config.py  definitions.py  resources.py  status.py
planning/: canonical-market-platform.md
plans/: county-intelligence-research-context-new-tab.txt  county-intelligence-research-context.txt  map-context-transfer-plan.md  map-selection-tool-plan.md  map-sketch-measure-tool-plan.md
reports/: database-audit-report-2026-03-11.md  database-comprehensive-state-2026-03-11.md  database-normalization-cleanup-2026-03-11.md  database-operational-remediation-2026-03-11.md  db-index-inventory-2026-03-11.tsv  db-mirror-deleted-2026-03-11.tsv  db-relation-inventory-2026-03-11.tsv
review-guide/: 01-workspace-and-bounded-contexts.md  02-contracts-and-runtime-packages.md  (+8 more)
(+1074 files in other folders)
